<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="50dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="305dp"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="211dp"
            android:layout_height="219dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:src="@color/purple_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/for_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tagName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/orange_light"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="7sp"
            app:layout_constraintTop_toBottomOf="@+id/img_photo"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/for_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myName"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagName" />

        <TextView
            android:id="@+id/tagEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/orange_light"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="7sp"
            app:layout_constraintTop_toBottomOf="@+id/for_name"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/for_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myEmail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagEmail" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>