<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_light"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="402dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/for_synopsis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

    </androidx.cardview.widget.CardView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/for_title">

        <TableRow>

            <TextView
                android:id="@+id/release"
                android:text="@string/release"
                android:textColor="@color/purple"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/for_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="9dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/director"
                android:text="@string/director"
                android:textColor="@color/purple"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/for_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="9dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/cast"
                android:text="@string/cast"
                android:textColor="@color/purple"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/for_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="9dp" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/for_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/for_synopsis"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/for_title"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColorHighlight="@color/purple_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/for_image"
        android:textSize="17dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>